manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: alb  # Use ALB Ingress class
    alb.ingress.kubernetes.io/scheme: internet-facing  # Can be internal or internet-facing
    alb.ingress.kubernetes.io/target-type: ip  # Use IP-based routing for ALB
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'  # Define ALB listener
spec:
  rules:
    - http:
        paths:
          - path: /nginx  # Root path for accessing your service
            pathType: Prefix
            backend:
              service:
                name: nginx-service  # Name of the Kubernetes service
                port:
                  number: 80
